ocaml (3.10.0-14) UNRELEASED; urgency=low

  * NOT RELEASED YET
  * fix vcs-svn field to point just above the debian/ dir

 -- Stefano Zacchiroli <zack@debian.org>  Fri, 28 Dec 2007 16:21:46 +0100

ocaml (3.10.0-13) unstable; urgency=low

  [ Stefano Zacchiroli ]
  * fix the cdbs class to pass -I flags down to ocamldoc

 -- Stefano Zacchiroli <zack@debian.org>  Fri, 28 Dec 2007 15:48:54 +0100

ocaml (3.10.0-12) unstable; urgency=low

  [ Julien Cristau ]
  * libgraphics.a is built for ocamlc, not ocamlopt.  Install it
    unconditionally in the ocaml package.  Have ocaml replace ocaml-nox
    because of this move (closes: #457569).  Thanks, Peter Palfrader!

 -- Samuel Mimram <smimram@debian.org>  Wed, 26 Dec 2007 14:03:36 +0100

ocaml (3.10.0-11) unstable; urgency=low

  [ Stefano Zacchiroli ]
  * explicitely chmod +x ocamldoc-api-ref-config during build

 -- Stefano Zacchiroli <zack@debian.org>  Wed, 19 Dec 2007 12:15:08 +0100

ocaml (3.10.0-10) unstable; urgency=low

  [ Stefano Zacchiroli ]
  * ignore ocamldoc-api-ref-config when invoking dh_fixperms, so that it
    remains executable (closes: #457014)

 -- Stefano Zacchiroli <zack@debian.org>  Wed, 19 Dec 2007 08:37:02 +0100

ocaml (3.10.0-9) unstable; urgency=low

  [ Samuel Mimram ]
  * Suggest "tarballs" instead of "upstream" in the policy as directory name
    for storing upstream sources since it is more standard.
  * Corrected emacs startup file, closes: #446177.

  [ Stefano Zacchiroli ]
  * add patch camlrun_shared, which ships an alternative version of the
    camlrun library (called "camlrun_shared") made of PIC objects
  * add Homepage field to debian/control

  [ Sylvain Le Gall ]
  * fixes in cdbs class for ocamldoc generation, provides
    ocamldoc-api-ref-config to centralize generation of .ocamldoc-apiref
  * remove ia64, arm and alpha native arches (no more ocamlopt for this arches)
  * array is bashism, remove it from ocamldoc-api-ref-config
  * upgrade to Standards-Version 3.7.3 (no change)