@@ -34,7 +34,7 @@
 <book>
     <bookinfo>
         <title>&debian-name; &ocaml-name; Packaging Policy for OCaml &ocaml-version;</title>
-        <releaseinfo>Revision 0.7.1</releaseinfo>
+        <releaseinfo>Revision 0.7.2</releaseinfo>
         &authors;
         &legal;
     </bookinfo>
